[package]
name = "apiagua"
version = "0.2.1"
authors = ["Neviim <neviimdev@gmail.com>"]
edition = "2018"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "rest-api"
path = "src/bin.rs"

[dependencies]
rocket = "0.4.5"
diesel = { version = "1.4.3", features = ["postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
cargo-edit = "0.6.0"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json"]
